<resources>
    <string name="app_name">GeoFlag</string>
    <string name="title_home">Home</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_map">Map</string>
    <string name="fragment_home">Fragment Home</string>
    <string name="fragment_quiz">Fragment Quiz</string>
    <string name="fragment_map">Fragment Map</string>
    <string name="description_flag_picture">The flag of a country</string>
    <string name="text_no_connection">No internet connection</string>
    <string name="text_retry">Retry</string>
    <string name="text_search_view">Search for countries</string>
    <string name="channel_notification_id">geoflag_channel</string>
    <string name="channel_notification_name">GeoFlag notifications</string>
    <string name="notification_title">You received a GeoFlag notification</string>
    <string name="description_person_pin">A pin with a person</string>
    <string name="title_login_activity">GeoFlag Sign In</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="description_google_logo">Google\'s logo</string>
    <string name="flag">Flag</string>
    <string name="previous">Back</string>
    <string name="country_name">"Name: "</string>
    <string name="country_capital">"Capital: "</string>
    <string name="country_region">"Region: "</string>
    <string name="country_languages">"Language: "</string>
    <string name="country_coordinates">"Coordinates: "</string>
    <string name="country_area">"Area: "</string>
    <string name="country_population">"Population: "</string>
    <string name="inhabitants">"Inhabitants "</string>
    <string name="see_on_map">See on map</string>
    <string name="best_score">"Best Score: "</string>
    <string name="settings">Settings</string>
    <string name="start">Start</string>
    <string name="choices">"Choices: "</string>
    <string name="difficulty">"Difficulty: "</string>
    <string name="player_name">"Player name: "</string>
    <string name="time">"Time: "</string>
    <string name="compass_logo">Compass logo</string>
    <string name="the_question_flag">The Question Flag</string>
    <string name="question">"Question "</string>
    <string name="every_countries">Every Countries</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="desc_difficulty">Countries selected for the questions are more or less large depending on the difficulty.</string>
    <string name="desc_time">The time of the game is set in seconds.</string>
    <string name="possibility">"Possibilities: "</string>
    <string name="desc_possibilities">The number of possible answers for each question.</string>
    <string name="save">Save</string>
    <string name="score">"Score: "</string>
    <string name="capital">"Capital: "</string>
    <string name="population">"Population: "</string>
    <string name="custom_time_slider">Slider for custom time range (30–90 seconds)</string>
    <string name="no_capital">No known capital</string>
    <string name="the_flag_of_the_country">The flag of the country</string>
    <string name="see_detail">See details</string>
    <string name="see_on_google_maps">See on Google Maps</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="player">Player</string>
    <string name="login_to_save_score">Requires to be logged in</string>
    <string name="close">Close</string>
    <string name="dialog_game_questions">"You answered right to: "</string>
    <string name="dialog_game_pourcentages">"Winrate: "</string>
    <string name="dialog_game_title">Game Over</string>
    <string name="questions">questions</string>
</resources>