<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/dialog_game_title"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:fontFamily="sans-serif-medium" />

    <View
        android:layout_width="390dp"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_game_questions"
                android:paddingTop="20dp"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/dialog_game_questions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_game_pourcentages"
                android:paddingTop="20dp"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/dialog_game_pourcentages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:layout_marginTop="25dp"
        android:id="@+id/closeButton" />

</LinearLayout>
